--- a/addtrack.html
+++ b/addtrack.html
@@ -1,10 +1,10 @@
-﻿<!DOCTYPE html>
-<html>
+﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
 	<head>
-    	<meta http-equiv="content-type" content="text/html; charset=UTF-8">
+    	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<title>Terminus - Gehitu kanta</title>
     	<link rel='stylesheet' type='text/css' href='styles/style.css' />
-    	<link rel="stylesheet" type="text/css" href="styles/form.css">
+    	<link rel="stylesheet" type="text/css" href="styles/form.css" />
 		<script type="text/javascript" src="form.js"></script>
 	</head>
   	<body>
@@ -20,8 +20,8 @@
 		</div>
 		<div class="wrapper">
 			<h2>Gehitu kanta</h2>
-			<br>
-			<form enctype="multipart/form-data" name = "erregistro" id="erregistro" onSubmit = "return balidatu()" action="addtrack.php" method="post" class="elegant-aero">
+			<br />
+			<form enctype="multipart/form-data" id="erregistro" onsubmit = "return balidatu()" action="addtrack.php" method="post" class="elegant-aero">
 				<p>Titulua (*):</p>
 				<p><input class="input" type="text" name="title" id="titulua" value=""/></p>
 				<p>Artista (*):</p>
@@ -43,30 +43,24 @@
 	  					<option value="Hard Dance">Hard Dance</option>
 					</select>
 				</div>
-				<br />
+				<p><br /></p>
 				<p>Urtea (*):</p>
-				<div class="select-style">
-					<select id="urtea" name="year">
-					<script>
-					var myDate = new Date();
-					var year = myDate.getFullYear();
-					for(var i = year; i > 1950; i--){
-						document.write('<option value="'+i+'">'+i+'</option>');
-					}
-					</script>
-					</select>
-				</div>
-				<br />
+				<p><input class="input" type="text" id="urtea" name="year" value=""/></p>
+				<p><br /></p>
 				<p>Diskografika (*):</p>
 				<p><input class="input" type="text" name="label" id="diskografika" value=""/></p>
-				<p><input type="file" name="irudia_ona" id="igoirudi" accept="image/*" onchange="irudiaikusi(event)"></p>
-				<br>
-				<img id="irudia" width="350" alt="">
-				<br>
+				<p><input type="file" name="irudia_ona" id="igoirudi" accept="image/*" onchange="irudiaikusi(event)" /></p>
+				<p><br /></p>
+				<p><img id="irudia" width="350" alt="" src="" /></p>
+				<p><br /></p>
 				<p><button class="button" type="submit">Bidali</button></p>
-				<br>
+				<p><br /></p>
 				<p>(*)Lauki guztiak bete behar dira</p>
 			</form>
+			<p><br /></p>
+			<p>
+				<a href="http://validator.w3.org/check?uri=referer"><img src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0 Strict" height="31" width="88" /></a>
+			</p>
 		</div>
 	</body>
 </html>
