--- a/credits.html
+++ b/credits.html
@@ -1,10 +1,10 @@
-﻿<!DOCTYPE html>
-<html>
+﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
 	<head>
-    	<meta http-equiv="content-type" content="text/html; charset=UTF-8">
+    	<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
 		<title>Terminus - Guri buruz</title>
     	<link rel='stylesheet' type='text/css' href='styles/style.css' />
-    	<link rel="stylesheet" type="text/css" href="styles/animate.css">
+    	<link rel="stylesheet" type="text/css" href="styles/animate.css" />
   	</head>
   	<body>
 	  	<div class = "header">
@@ -19,32 +19,32 @@
 		</div>
 		<div class="wrapper">
 		<p>Orrialde hau ondorengo pertsonak garatu du:</p>
-			<br>
+			<p><br /></p>
 			<div class="flip-container" ontouchstart="this.classList.toggle('hover');">
 				<div class="flipper">
 					<div class="front">
-						<img src="img/avatarO.png" alt="">
+						<img src="img/avatarO.png" alt="" />
 					</div>
 					<div class="back grad">
-						<br>
-						<br>
-						<br>
-						<br>
-						<br>
-						<br>
-						<br>
-						<br>
+						<br />
+						<br />
+						<br />
+						<br />
+						<br />
+						<br />
+						<br />
+						<br />
 						<h3>Oihan Arroyo</h3>
 						<p>Software Ingenieritza</p>
 					</div>
 				</div>
 			</div>
-			<br>
-			<br>
+			<br />
+			<br />
 			<div>
 				<p>Web orrialde honen kodea ikusi nahi baduzu, egin click irudiaren gainean</p>
-				<br>
-				<a href="http://www.github.com"><img src="img/githublogo.png"></a>
+				<br />
+				<a href="http://www.github.com"><img src="img/githublogo.png" alt="" /></a>
 			</div>
 		</div>
 	</body>
