--- a/credits.html
+++ b/credits.html
@@ -45,8 +45,8 @@
 				<p>Web orrialde honen kodea ikusi nahi baduzu, egin click irudiaren gainean</p>
 				<br />
 				<a href="http://www.github.com"><img src="img/githublogo.png" alt="" /></a>
-				<br>
-				<a href="https://github.com/oihan95/Terminus_SZA"><img src="img/githublogo.png"></a>
+				<br />
+				<a href="https://github.com/oihan95/Terminus_SZA"><img src="img/githublogo.png" alt="" /></a>
 			</div>
 		</div>
 	</body>
