--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-﻿<!DOCTYPE html>
-<html>
+﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
 	<head>
-    	<meta http-equiv="content-type" content="text/html; charset=UTF-8">
+    	<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
 		<title>Terminus - Hasiera</title>
     	<link rel='stylesheet' type='text/css' href='styles/style.css' />
-    	<link rel="stylesheet" type="text/css" href="styles/table.css">
+    	<link rel="stylesheet" type="text/css" href="styles/table.css" />
   	</head>
   	<body>
 	  	<div class = "header">
@@ -19,15 +19,19 @@
 		</div>
 		<div class="wrapper">
 			<h2>Ongi etorri Terminus-era!</h2>
-			<br>
-			<img src="img/terminus.png" width="250">
-			<br>
+			<br />
+			<img src="img/terminus.png" width="250" alt="" />
+			<br />
 			<h4><span style="color: red;">Terminus</span> kanten informazioa metatzeko web orrialde bat da. Nahi baduzu, 'Gehitu kanta' atalean zuk nahi duzun kantaren informazioa igo ahalko duzu. </h4>
-			<br>
+			<br />
 			<h4>Kanta asko badaude eta nahi duzun kanta aurkitzen ez baduzu, lasai. Alboan 'Bilatu' atala daukazu. Sartu bertan kantaren titulua eta bilatzaileak erakutsiko dizu.</h4>
-			<br>
+			<br />
 			<h4>Beste gabe, erabili lasai asko web gune hau, trasteatu, akatsen bat aurkitzen baduzu <a class="esteka white" href="mailto:oihan8arroyo@gmail.com">esan</a> lasai asko eta kodea ikusi nahi baduzu, 'Guri buruz' atalean aurkituko duzu esteka.</h4>
-			
+			<br />
+			<p>
+				<a href="http://validator.w3.org/check?uri=referer"><img
+      src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0 Strict" height="31" width="88" /></a>
+      		</p>
     	</div>		
 	</body>
 </html>
