--- a/search.html
+++ b/search.html
@@ -1,15 +1,15 @@
-﻿<!DOCTYPE html>
-<html>
+﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
 	<head>
-    	<meta http-equiv="content-type" content="text/html; charset=UTF-8">
+    	<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
 		<title>Terminus - Bilatu</title>
     	<link rel='stylesheet' type='text/css' href='styles/style.css' />
-    	<link rel="stylesheet" type="text/css" href="styles/form.css">
+    	<link rel="stylesheet" type="text/css" href="styles/form.css" />
     	<link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/base/jquery-ui.css" rel="stylesheet" type="text/css"/>
-		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4/jquery.min.js"></script>
-		<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.js"></script>
+		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4/jquery.min.js" type="text/javascript" ></script>
+		<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.js" type="text/javascript" ></script>
 		<script type="text/javascript" src="search.js"></script>
-		<link rel="stylesheet" type="text/css" href="styles/table.css">
+		<link rel="stylesheet" type="text/css" href="styles/table.css" />
   	</head>
   	<body>
 	  	<div class = "header">
@@ -23,13 +23,18 @@
 				</div>
 		</div>
 		<div class="wrapper">
-			<form name = "bilatu" id="bilatu" class="gorputza">
+			<form id="bilatu" class="gorputza" action="">
 				<p>Bilatu hemen kantaren titulua</p>
-				<br>
-				<p><input class="input" type="text" name="title" id="titulua" value="" onkeyup="showResult(this.value)"></p>
+				<p><br /></p>
+				<p><input class="input" type="text" name="title" id="titulua" value="" onkeyup="showResult(this.value)" /></p>
 				<div id="emaitzak"></div>
 				<p>(*)Titulua bakarrik bila daiteke, artista momentuz ez.</p>
 			</form>
+			<br />
+			<p>
+			<a href="http://validator.w3.org/check?uri=referer"><img
+      src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0 Strict" height="31" width="88" /></a>
+      		</p>
 		</div>
 	</body>
 </html>
