--- a/credits.html
+++ b/credits.html
@@ -46,7 +46,9 @@
 				<br />
 				<a href="http://www.github.com"><img src="img/githublogo.png" alt="" /></a>
 				<br />
-				<a href="https://github.com/oihan95/Terminus_SZA"><img src="img/githublogo.png" alt="" /></a>
+				<p>
+				<a href="http://validator.w3.org/check?uri=referer"><img src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0 Strict" height="31" width="88" /></a>
+			</p>
 			</div>
 		</div>
 	</body>
