--- a/credits.html
+++ b/credits.html
@@ -44,7 +44,7 @@
 			<div>
 				<p>Web orrialde honen kodea ikusi nahi baduzu, egin click irudiaren gainean</p>
 				<br />
-				<a href="http://www.github.com"><img src="img/githublogo.png" alt="" /></a>
+				<a href="http://www.github.com/oihan95/Terminus_SZA"><img src="img/githublogo.png" alt="" /></a>
 				<br />
 			</div>
 		</div>
